vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = "10.1.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "tf-${local.RUNNER}-${local.ORGANIZATION}-vpc"
  }
}

resource "aws_subnet" "public-subnet-a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.1.1.0/24"
  availability_zone = "${var.AWS_REGION}a"

  tags = {
    Name = "tf-${local.RUNNER}-${local.ORGANIZATION}-public-subnet-a"
  }
}

resource "aws_subnet" "public-subnet-b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.1.2.0/24"
  availability_zone = "${var.AWS_REGION}b"

  tags = {
    Name = "tf-${local.RUNNER}-${local.ORGANIZATION}-public-subnet-b"
  }
}

resource "aws_subnet" "private-subnet-a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.1.3.0/24"
  availability_zone = "${var.AWS_REGION}a"

  tags = {
    Name = "tf-${local.RUNNER}-${local.ORGANIZATION}-private-subnet-a"
  }
}

resource "aws_subnet" "private-subnet-b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.1.4.0/24"
  availability_zone = "${var.AWS_REGION}b"

  tags = {
    Name = "tf-${local.RUNNER}-${local.ORGANIZATION}-private-subnet-b"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "tf-${local.RUNNER}-${local.ORGANIZATION}-igw"
  }
}

resource "aws_eip" "nat_eip" {
  domain = "vpc"

  tags = {
    Name = "tf-${local.RUNNER}-${local.ORGANIZATION}-eip"
  }
}

resource "aws_nat_gateway" "nat-gtwy" {
  depends_on = [aws_internet_gateway.igw]

  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public-subnet-a.id

  tags = {
    Name = "tf-${local.RUNNER}-${local.ORGANIZATION}-nat"
  }
}

resource "aws_route_table" "public-rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "tf-${local.RUNNER}-${local.ORGANIZATION}-public-rt"
  }
}

resource "aws_route_table" "private-rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat-gtwy.id
  }

  tags = {
    Name = "tf-${local.RUNNER}-${local.ORGANIZATION}-private-rt"
  }
}

resource "aws_route_table_association" "public-a" {
  subnet_id      = aws_subnet.public-subnet-a.id
  route_table_id = aws_route_table.public-rt.id
}

resource "aws_route_table_association" "public-b" {
  subnet_id      = aws_subnet.public-subnet-b.id
  route_table_id = aws_route_table.public-rt.id
}

resource "aws_route_table_association" "private-a" {
  subnet_id      = aws_subnet.private-subnet-a.id
  route_table_id = aws_route_table.private-rt.id
}

resource "aws_route_table_association" "private-b" {
  subnet_id      = aws_subnet.private-subnet-b.id
  route_table_id = aws_route_table.private-rt.id
}

resource "aws_vpc_endpoint" "s3" {
  vpc_id            = aws_vpc.main.id
  service_name      = "com.amazonaws.us-east-1.s3"
  vpc_endpoint_type = "Gateway"
  route_table_ids = [
    aws_route_table.private-rt.id,
    aws_route_table.public-rt.id
  ]
}
